[package]
authors = ["Matvei <klimatt.gu@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "vhrd-bootloader"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.7"
cortex-m-rt = "0.6.13"
cfg-if = "0.1"
panic-halt = "0.2.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
vhrdcan = {path = "../vhrdcan"}#"0.1.0"
embedded-hal = "0.2.4"
vhrd-module-nvconfig = {git = "https://github.com/vhrdtech/vhrd-module-nvconfig.git", branch = "master"}
crc = "2.0.0"
bxcan = "0.2.0"
mcp25625 = {path = "../mcp25625"}#"0.1.0"
uavcan-llr = {path = "../uavcan-llr", features = ["vhrdcan"]}
#{git = "https://github.com/vhrdtech/uavcan-llr.git", branch = "main"}

[dependencies.vhrd-flash-writer]
git = "https://github.com/vhrdtech/vhrd-flash-writer.git"
branch = "main"
default-features = false
features = ["stm32f051"]
optional = false

[dependencies.stm32f0xx-hal]
git = "https://github.com/stm32-rs/stm32f0xx-hal.git"
branch = "master"
features = ["stm32f051", "rt"]
default-features = false
optional = true

[dependencies.stm32g4xx-hal]
path = "../stm32g4xx-hal"
version = "0.0.0"
default-features = false
features = ["rt", "stm32g474"]
optional = true

[dependencies.stm32l4xx-hal]
version = "0.6"
default-features = false
features = ["rt", "stm32l4x6"]
optional = true

[features]
default = []
cortex-m0 = []

stm32f0xx = ["stm32f0xx-hal", "cortex-m0"]
stm32g4xx = ["stm32g4xx-hal"]
stm32l4xx = ["stm32l4xx-hal"]

[[bin]]
name = "vhrd-bootloader"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"