[package]
authors = ["Matvei <klimatt.gu@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "vhrd-bootloader"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.7"
cortex-m-rt = "0.6.13"
cfg-if = "0.1"
panic-halt = "0.2.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
vhrdcan = { git = "https://github.com/vhrdtech/vhrdcan.git", version = "0.1.0" }
embedded-hal = "0.2.4"
vhrd-module-nvconfig = { git = "https://github.com/vhrdtech/vhrd-module-nvconfig.git", branch = "master"}
crc = "2.0.0"
uavcan-llr = { features = ["vhrdcan"], git = "https://github.com/vhrdtech/uavcan-llr.git" }
mcp25625 = { git = "https://github.com/romixlab/mcp25625.git", version = "0.1.0", optional = true }

[patch."https://github.com/vhrdtech/vhrd-module-nvconfig.git"]
vhrd-module-nvconfig = { path = "../vhrd-module-nvconfig" }

[dependencies.vhrd-flash-writer]
git = "https://github.com/vhrdtech/vhrd-flash-writer.git"
branch = "main"
default-features = false
optional = false

[dependencies.stm32f0xx-hal]
git = "https://github.com/romixlab/stm32f0xx-hal.git"
branch = "master"
default-features = false
optional = true

[dependencies.stm32f4xx-hal]
version = "0.9.0"
default-features = false
optional = true

[dependencies.stm32g4xx-hal]
path = "../stm32g4xx-hal"
version = "0.0.0"
default-features = false
optional = true

[dependencies.stm32l4xx-hal]
version = "0.6"
default-features = false
optional = true

[dependencies.bxcan]
version = ">=0.4, <0.6"
optional = true

[features]
default = []
cortex-m0 = []


spi-can = ["mcp25625"]
reg-can = []
stm32f051 = ["stm32f0xx-hal/stm32f051","stm32f0xx-hal/rt", "cortex-m0", "vhrd-flash-writer/stm32f051"]
stm32f072 = ["stm32f0xx-hal/stm32f072","stm32f0xx-hal/rt", "cortex-m0", "vhrd-flash-writer/stm32f072"] #fix flash-writer
stm32f405 = ["stm32f4xx-hal/stm32f405","stm32f4xx-hal/rt", "stm32f4xx-hal/can", "vhrd-flash-writer/stm32f405", "bxcan"]

[[bin]]
name = "vhrd-bootloader"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"